JSAI/error/src/test/resources/base/elementget_a001.js
var obj = {f1: "first", f2: "second"};

var x = obj["f1"];
print(x);
